--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "nosql-challenge-social-network-api",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/MickieBurch/NoSQL-Challenge-Social-Network-API#readme",
   "dependencies": {
-    "express": "^4.17.3",
+    "express": "^4.18.0",
     "mongoose": "^6.3.1"
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
